2010-11-11  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Darin Adler.

        REGRESSION: window.print in onload doesn't fire if there's an img
        https://bugs.webkit.org/show_bug.cgi?id=48195

        This issue was introduced in
        https://bugs.webkit.org/show_bug.cgi?id=43658
        This happens because FrameLoader::isLoading() is false while an
        image is still loading. Now, window.print() happens after all
        resources are loaded.

        Also changed the name of a member variable as Darin suggested in Bug 43658.

        Added a manual test as DRT doesn't support window.print() yet.

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::DocumentLoader):
        (WebCore::DocumentLoader::updateLoading):
        * loader/DocumentLoader.h:
        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::DOMWindow):
        (WebCore::DOMWindow::print):
        (WebCore::DOMWindow::finishedLoading):
        * page/DOMWindow.h:

Canonical link: https://commits.webkit.org/62368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71892 268f45cc-cd09-0410-ab3c-d52691b4dbfc